@@ -1,11 +1,0 @@
-    1  2010-12-14 15:08:45.910679 IP 192.168.0.134.47808 > 192.168.0.24.47808: UDP, length 6
-    2  2010-12-14 15:08:45.910728 IP 192.168.0.134.47808 > 192.168.0.24.47808: UDP, length 12
-    3  2010-12-14 15:08:45.916723 IP 192.168.0.24.47808 > 192.168.0.134.47808: UDP, length 6
-    4  2010-12-14 15:08:45.919556 IP 192.168.0.24.47808 > 192.168.0.255.47808: UDP, length 18
-    5  2010-12-14 15:08:45.919723 IP 192.168.0.105.47808 > 192.168.0.255.47808: UDP, length 25
-    6  2010-12-14 15:08:45.936414 IP 192.168.0.24.47808 > 192.168.0.134.47808: UDP, length 31
-    7  2010-12-14 15:08:45.937216 IP 192.168.0.18.47808 > 192.168.0.255.47808: UDP, length 24
-    8  2010-12-14 15:08:45.948725 IP 192.168.0.24.40896 > 192.168.0.134.47808: UDP, length 30
-    9  2010-12-14 15:08:45.960097 IP 192.168.0.24.47808 > 192.168.0.255.47808: UDP, length 20
-   10  2010-12-14 15:08:45.963239 IP 192.168.0.9.37123 > 97.34.1.224.8472: OTV, flags [I] (0x9d), overlay 12124160, instance 4587520
- [|ether]
